# vpnmux

./: CHANGELOG.md  Cargo.toml  README.md  manifest.scm
.github/workflows/: release.yml
packaging/: vpnmux.service
packaging/waybar/: config.jsonc  style.css  vpnmux-waybar-status.sh  vpnmux-waybar-toggle.sh
src/: cli.rs  coexistence.rs  daemon.rs  dns.rs  fsutil.rs  log.rs  main.rs  mullvad.rs  nft.rs  paths.rs  provider.rs  reconcile.rs  runner.rs  state.rs  sys.rs  tailscale.rs  types.rs
